--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <main>
       <section class="result">
-        <h2>Your Result</h2>
+        <h2 class="lightText">Your Result</h2>
         <div class="scoreNumber">
           <p class="bold">76</p>
           <p>of 100</p>
