--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
 
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
 
     <title>Frontend Mentor | Results summary component</title>
   </head>
@@ -22,17 +23,22 @@
         <h2 class="lightText">Your Result</h2>
         <div class="scoreNumber">
           <p class="bold">76</p>
-          <p>of 100</p>
+          <p class="lightText">of 100</p>
         </div>
         <h3>Great</h3>
-        <p>
+        <p class="lightText">
           You scored higher than 65% of the people who have taken these tests.
         </p>
       </section>
 
       <section class="details">
         <h2>Summary</h2>
-        
+
+        <div class="summaryRows">
+          
+        </div>
+
+        <button>Continue</button>
       </section>
     </main>
 
@@ -40,7 +46,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">justincbal</a>.
+      >. Coded by <a href="https://github.com/justincbal" target="_blank">justincbal</a>.
     </div>
   </body>
 </html>
